重构数据结构 新增多行数据合并的功能  新增date rxnumber 字段

--- a/data/pharmacode_ordertemplate_dict.config
+++ b/data/pharmacode_ordertemplate_dict.config
@@ -1,4 +1,4 @@
-product_code,template_path_name,pack_divisor,product_name, outerpack_divisor
+Pharmacode,template_path_name,pack_divisor,product_name, outerpack_divisor
 2444852,Pediasure RPB.txt,20000,Pediasure RPB Chocolate, 30
 2444844,Pediasure RPB.txt, 20000,Pediasure RPB Vanilla, 30
 2444860,Pediasure RPB.txt,20000,Pediasure RPB Strawberry, 30
